# pic2cal

./: .gitignore  Docker-Compose.yaml  Dockerfile  Readme.md  bot-i.py  cal2mail_utils.py  conversationbot.pickle  env.example  inviter.ipynb  open_ai_image_handler.py  pyproject.toml
tests/: test_open_ai_image_handler.py
